added backblaze s3 conf

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
+annotated-types==0.7.0
 asgiref==3.8.1
+b2sdk==2.8.0
+boto3==1.24.89
+botocore==1.27.89
+certifi==2025.1.31
+charset-normalizer==3.4.1
 Django==5.1.7
 django-environ==0.12.0
+django-storages==1.14.6
 django_components==0.130
 djc_core_html_parser==1.0.1
+idna==3.10
+jmespath==1.0.1
+logfury==1.0.1
 pillow==11.1.0
 PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+requests==2.32.3
+s3transfer==0.6.2
+six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.1
+urllib3==1.26.20
 whitenoise==6.9.0
