--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tailwindcss": "^4.0.13"
   },
   "scripts": {
-    "start": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch"
+    "start": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
+    "build": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify"
   }
 }
