--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ botocore==1.27.89
 certifi==2025.1.31
 charset-normalizer==3.4.1
 Django==5.2
+django-ckeditor-5==0.2.18
 django-environ==0.12.0
+django-js-asset==3.1.2
 django-storages==1.14.6
 django_components==0.130
 djc_core_html_parser==1.0.1
