started frontend design of admin profile management

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "scripts": {
     "start": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --watch",
     "build": "tailwindcss -i ./static/css/input.css -o ./static/css/output.css --minify"
+  },
+  "devDependencies": {
+    "daisyui": "^5.0.43"
   }
 }
