--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-environ==0.12.0
 django-js-asset==3.1.2
 django-storages==1.14.6
 django_components==0.130
+djangorestframework==3.16.0
 djc_core_html_parser==1.0.1
 idna==3.10
 jmespath==1.0.1
